<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/global_padding"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/bread_title_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <RadioGroup
            android:id="@+id/radio_group"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/radio_baguette"
                android:checked="true"
                android:text="@string/baguette_label_button"
                android:paddingBottom="@dimen/padding_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/radio_bagel"
                android:text="@string/bagel_label_button"
                android:paddingBottom="@dimen/padding_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RadioGroup>

    <TextView
            android:text="@string/ingredients_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingTop="@dimen/padding_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <CheckBox
            android:id="@+id/check_ham"
            android:text="@string/Ham_label"
            android:checked="false"
            android:paddingBottom="@dimen/padding_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <CheckBox
            android:id="@+id/check_cheese"
            android:text="@string/cheese_label"
            android:checked="false"
            android:paddingBottom="@dimen/padding_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Switch
            android:id="@+id/switch_toasted"
            android:checked="false"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/toasted_label"
            android:paddingBottom="@dimen/padding_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Switch
            android:id="@+id/switch_salt"
            android:checked="false"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/salt_label"
            android:paddingBottom="@dimen/padding_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <RelativeLayout
            android:id="@+id/action_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/action_ok"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:onClick="actionOKClicked"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/ok_label"
                android:textColor="@color/colorAccent"/>

        <TextView
                android:id="@+id/action_cancel"
                android:layout_toStartOf="@id/action_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/paddin_left_rigth"
                android:paddingStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="actionCancelClicked"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/cancel_label"
                android:textColor="@color/colorAccent"/>
    </RelativeLayout>

    <TextView
            android:id="@+id/text_view_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/padding_bottom"/>

    <TextView
            android:id="@+id/total_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/padding_bottom"/>

</LinearLayout>